Added Skeleton HTML
Basic HTML

--- a/index.html
+++ b/index.html
@@ -15,10 +15,53 @@
 
         <!-- Title -->
         <title>Currency Converter</title>
-    </head>
-    
+    </head> 
+
     <body>
-        
+        <div>
+            <h1>Currency Converter</h1>
+            <div>
+                <div>
+                    <p>Enter Amount</p>
+                    <input type="number" placeholder="1000">
+                </div>
+                <div>
+                    <div>
+                        <p>From</p>
+                        <div>
+                            <img src="">
+                            <select>
+                                <option>USD</option>
+                                <option>EUR</option>
+                                <option>GBP</option>
+                                <option>JPY</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div>
+                        <button>
+                            <img src="">
+                        </button>
+                    </div>
+                    <div>
+                        <p>To</p>
+                        <div>
+                            <img src="">
+                            <select>
+                                <option>USD</option>
+                                <option>EUR</option>
+                                <option>GBP</option>
+                                <option>JPY</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <p>1,000 USD = 123123 EUR</p>
+                </div>
+            </div>
+            <button>Get Exchange Rate</button>
+        </div>
     </body>
 
     <!-- Script Link -->
