Added icons folder
Placeholder images in HTML select element

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div>
                         <p>From</p>
                         <div>
-                            <img src="">
+                            <img src="icons/USA.svg">
                             <select>
                                 <option>USD</option>
                                 <option>EUR</option>
@@ -46,7 +46,7 @@
                     <div>
                         <p>To</p>
                         <div>
-                            <img src="">
+                            <img src="icons/USA.svg">
                             <select>
                                 <option>USD</option>
                                 <option>EUR</option>
